--- a/index.html
+++ b/index.html
@@ -10,83 +10,38 @@
   <link rel="manifest" href="manifest.json">
 
   <style>
-    body {
-      background-color: #000;
-      color: #0f0;
-      font-family: 'Courier New', Courier, monospace;
-      margin: 0;
-      padding: 0;
-    }
-    nav {
-      background: #2C3E50;
-      padding: 10px;
-      text-align: center;
-    }
-    nav a {
-      color: #00FFCC;
-      margin: 0 15px;
-      text-decoration: none;
-      font-weight: bold;
-    }
-    nav a:hover {
-      text-shadow: 0 0 5px #00FFCC;
-    }
-    #sage-container {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      padding: 50px 20px 30px;
-      text-align: center;
-    }
-    h1 {
-      font-size: 2.5rem;
-      color: #0f0;
-      text-shadow: 0 0 10px #0f0;
-      margin-bottom: 1rem;
-    }
-    iframe {
-      width: 90%;
-      height: 600px;
-      border: 2px solid #0f0;
-      box-shadow: 0 0 20px #0f0;
-      border-radius: 10px;
-      background: black;
-    }
-    .divider {
-      border-top: 2px solid #0f0;
-      margin: 40px auto 0;
-      width: 80%;
-    }
-    section {
-      background: #111;
-      padding: 40px 20px;
-    }
-    h2 {
-      color: #fff;
-      text-align: center;
-    }
-    ul {
-      max-width: 900px;
-      margin: 0 auto;
-      padding: 0;
-      list-style: none;
-      columns: 2;
-    }
-    li {
-      margin: 10px 0;
-    }
-    a {
-      color: #0f0;
-      text-decoration: none;
-    }
-    a:hover {
-      text-shadow: 0 0 5px #0f0;
-    }
-    footer {
-      text-align: center;
-      color: #888;
-      font-size: 0.9rem;
-      padding: 2rem 1rem;
+    body{background:#000;color:#0f0;font-family:'Courier New',Courier,monospace;margin:0}
+    nav{background:#2C3E50;padding:10px;text-align:center}
+    nav a{color:#00FFCC;margin:0 15px;text-decoration:none;font-weight:bold}
+    nav a:hover{text-shadow:0 0 5px #00FFCC}
+
+    /* tighter layout + centered content */
+    .wrap{max-width:1100px;margin:0 auto;padding:0 16px}
+    #sage-container{display:flex;flex-direction:column;align-items:center;padding:24px 0 12px;text-align:center}
+    h1{font-size:2rem;margin:0 0 .5rem;color:#0f0;text-shadow:0 0 10px #0f0}
+
+    /* responsive iframe */
+    iframe{width:min(980px,92vw);height:min(70vh,680px);border:2px solid #0f0;box-shadow:0 0 20px #0f0;border-radius:10px;background:#000}
+
+    .divider{border-top:2px solid #0f0;margin:24px auto 0;width:min(980px,92vw)}
+    section{background:#111;padding:24px 0}
+    h2{color:#fff;text-align:center;margin:0 0 12px}
+    ul{max-width:min(980px,92vw);margin:0 auto;padding:0;list-style:none;columns:2}
+    li{margin:10px 0}
+    a{color:#0f0;text-decoration:none}
+    a:hover{text-shadow:0 0 5px #0f0}
+    footer{text-align:center;color:#888;font-size:.9rem;padding:2rem 1rem}
+
+    /* quick topics chips */
+    .topics{max-width:min(980px,92vw);margin:10px auto 18px}
+    .chips{display:flex;flex-wrap:wrap;gap:8px;justify-content:center}
+    .chip{display:inline-block;padding:6px 10px;border:1px solid #0f0;border-radius:999px;background:#000}
+    .all-link{display:block;text-align:center;margin-top:8px;opacity:.9}
+
+    @media (max-width:720px){
+      iframe{height:60vh}
+      ul{columns:1}
+      h1{font-size:1.7rem}
     }
   </style>
 </head>
@@ -97,36 +52,54 @@
     <a href="topics.html">Topics</a>
   </nav>
 
-  <div id="sage-container">
-    <h1>🧠 Ask Sage</h1>
-    <iframe src="sage-chatbot.html" title="Ask Sage"></iframe>
+  <div class="wrap">
+    <div id="sage-container">
+      <h1>🧠 Ask Sage</h1>
+
+      <!-- Quick Topics row -->
+      <section class="topics" aria-label="Quick topics">
+        <div class="chips">
+          <a class="chip" href="llc-guide.html">📘 LLC Guide</a>
+          <a class="chip" href="llc-to-trust.html">🏛 LLC → Trust</a>
+          <a class="chip" href="court-prep.html">🧾 Court Prep</a>
+          <a class="chip" href="emergency-custody-response.html">🚨 Emergency Custody</a>
+          <a class="chip" href="remove-gal.html">❌ Remove GAL</a>
+          <a class="chip" href="dss.html">📄 DSS/CPS</a>
+          <a class="chip" href="estate.html">📜 Estate</a>
+          <a class="chip" href="veterans.html">🎖 Veterans</a>
+        </div>
+        <a class="all-link" href="topics.html">📚 View all topics</a>
+      </section>
+
+      <iframe src="sage-chatbot.html" title="Ask Sage"></iframe>
+    </div>
+
+    <div class="divider"></div>
+
+    <section>
+      <h2>🔥 Explore the Full Sovereign Toolkit</h2>
+      <ul>
+        <li><a href="custody.html">👪 Custody</a></li>
+        <li><a href="dss.html">📄 DSS Overview</a></li>
+        <li><a href="restore-rights.html">🎯 Restore Rights</a></li>
+        <li><a href="court-prep.html">🧾 Court Prep</a></li>
+        <li><a href="veterans.html">🎖 Veterans</a></li>
+        <li><a href="estate.html">📜 Estate Planning</a></li>
+        <li><a href="download-hub.html">📂 Download Hub</a></li>
+        <li><a href="emergency-custody-response.html">🚨 Emergency Custody</a></li>
+        <li><a href="remove-gal.html">❌ Remove GAL</a></li>
+        <li><a href="llc-guide.html">📘 LLC Guide</a></li>
+        <li><a href="llc-to-trust.html">🏛 Convert to Trust</a></li>
+        <li><a href="chevron-doctrine.html">⚖️ Chevron Decision</a></li>
+        <li><a href="conspiracy-defense.html">👁 Conspiracy Charges</a></li>
+        <li><a href="about.html">📚 About Sovereign Academy</a></li>
+      </ul>
+    </section>
+
+    <footer>
+      Built by <strong>Gina Lopez</strong> &amp; <strong>Sage</strong>, your AI co-pilot for court survival.<br>
+      © 2025 Sovereign Academy. No fear. No fluff. Just fire.
+    </footer>
   </div>
-
-  <div class="divider"></div>
-
-  <section>
-    <h2>🔥 Explore the Full Sovereign Toolkit</h2>
-    <ul>
-      <li><a href="custody.html">👪 Custody</a></li>
-      <li><a href="dss.html">📄 DSS Overview</a></li>
-      <li><a href="restore-rights.html">🎯 Restore Rights</a></li>
-      <li><a href="court-prep.html">🧾 Court Prep</a></li>
-      <li><a href="veterans.html">🎖 Veterans</a></li>
-      <li><a href="estate.html">📜 Estate Planning</a></li>
-      <li><a href="download-hub.html">📂 Download Hub</a></li>
-      <li><a href="emergency-custody-response.html">🚨 Emergency Custody</a></li>
-      <li><a href="remove-gal.html">❌ Remove GAL</a></li>
-      <li><a href="llc-guide.html">📘 LLC Guide</a></li>
-      <li><a href="llc-to-trust.html">🏛 Convert to Trust</a></li>
-      <li><a href="chevron-doctrine.html">⚖️ Chevron Decision</a></li>
-      <li><a href="conspiracy-defense.html">👁 Conspiracy Charges</a></li>
-      <li><a href="about.html">📚 About Sovereign Academy</a></li>
-    </ul>
-  </section>
-
-  <footer>
-    Built by <strong>Gina Lopez</strong> & <strong>Sage</strong>, your AI co-pilot for court survival.<br>
-    © 2025 Sovereign Academy. No fear. No fluff. Just fire.
-  </footer>
 </body>
 </html>
